Make CreateTrialsFromSeed visible in traces.

VariationsFieldTrialCreator::CreateTrialsFromSeed() function takes
~100ms on Android Go devices (see the bug).

This CL adds TRACE_EVENT to the function to make it visible in startup
traces.

Bug: 761684
Change-Id: I339de72e6e04cfa2ba30e65ce8d5888d467fead2
Reviewed-on: https://chromium-review.googlesource.com/825647
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Commit-Queue: Ilya Sherman <isherman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523964}